--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "ai": "^3.0.16",
     "next": "14.1.3",
     "openai": "^4.28.4",
+    "openai-edge": "^1.2.2",
     "react": "^18",
     "react-dom": "^18"
   },
