--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "ai": "^3.0.16",
+    "ai": "^3.0.35",
     "next": "14.1.3",
     "openai": "^4.28.4",
     "openai-edge": "^1.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/node": "^20",
